# calorie-counter

./: README.md  Tatu_Bogdan_Practical_Application_CTIEN_License.txt  package-lock.json  package.json  tsconfig.json
api/: Cargo.toml  Rocket.toml
api/migrations/2023-06-06-165754_create_favorite_food/: down.sql  up.sql
api/migrations/2023-06-10-144305_create_meals/: up.sql
api/migrations/2023-06-15-172444_create_settings/: down.sql  up.sql
api/migrations/2023-06-16-182309_create_meals/: up.sql
api/migrations/2023-06-18-162850_create_water/: up.sql
api/migrations/2023-06-24-065533_create_source_enum/: down.sql
api/migrations/2023-06-24-065622_add_source_to_meal/: down.sql  up.sql
api/migrations/2023-06-24-070354_add_source_to_favorite_food/: down.sql
api/src/: impls.rs  main.rs  schema.rs
api/src/constants/: usda_ids.rs
api/src/controllers/: account.rs  daily.rs  favorite_foods.rs  food.rs  meals.rs  mod.rs  progress.rs  settings.rs  stats.rs  water.rs
api/src/dto/: daily_dtos.rs  food.rs  food_dtos.rs  meal.rs  meal_dtos.rs  mod.rs  progress_dtos.rs  stats_dtos.rs  water_dtos.rs
api/src/models/: favorite_food.rs  macro_goal.rs  meal.rs  mod.rs  settings.rs  source_enum.rs  water.rs
api/src/repos/: favorite_food_repo.rs  food_repo.rs  macro_goal_repo.rs  meal_repo.rs  mod.rs  settings_repo.rs  water_repo.rs
api/src/services/: usda_food.rs
app/: .env  (+6 more)
backend-v1/: Cargo.toml
backend-v1/migrations/2023-06-16-182648_create_favorite_food/: down.sql  up.sql
backend-v1/migrations/2023-06-22-144608_create_macro_goals/: up.sql
backend-v1/migrations/2023-06-22-164326_create_meals/: up.sql
backend-v1/migrations/2023-06-24-065533_create_source_enum/: up.sql
backend-v1/migrations/2023-06-24-070354_add_source_to_favorite_food/: up.sql
backend-v1/migrations/2023-06-24-174002_create_food/: up.sql
backend-v1/src/: db.rs  main.rs  schema.rs  tests.rs  utils.rs
backend-v1/src/controllers/: account.rs  daily.rs  favorite_foods.rs  food.rs  meals.rs  mod.rs  progress.rs  settings.rs  stats.rs  water.rs
backend-v1/src/dto/: favorite_food_dtos.rs  food_dtos.rs  meal_dtos.rs  progress_dtos.rs
backend-v1/src/models/: favorite_food.rs  food.rs  settings.rs  source_enum.rs  water.rs
backend-v1/src/repos/: favorite_food_repo.rs  food_repo.rs  macro_goal_repo.rs  meal_repo.rs  settings_repo.rs  water_repo.rs
backend-v1/src/services/: usda_food.rs
backend-v2/: Cargo.toml
backend-v2/examples/: error_handling.rs  snippet.rs
backend-v2/migrations/2023-06-15-172444_create_settings/: down.sql  up.sql
backend-v2/migrations/2023-06-18-162850_create_water/: down.sql
backend-v2/migrations/2023-06-21-194247_create_settings/: up.sql
backend-v2/migrations/2023-06-22-144608_create_macro_goals/: down.sql
backend-v2/migrations/2023-06-24-174002_create_food/: down.sql
backend-v2/src/: constants.rs  controllers.rs  db.rs  dto.rs  main.rs  middleware.rs  models.rs  repos.rs  services.rs
backend-v2/src/controllers/: account.rs  daily.rs  favorite_foods.rs  food.rs  meals.rs  progress.rs  settings.rs  stats.rs  utils.rs  water.rs
backend-v2/src/dto/: daily_dtos.rs  favorite_food_dtos.rs  food_dtos.rs  macro_goals_dtos.rs  meal_dtos.rs  (+3 more)
backend/calorie_counter_api/: Cargo.toml
(+234 files in other folders)
