[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.24", features = ["serde"]}
diesel = {version = "2.1.0", features = ["postgres", "chrono"]}
diesel-derive-enum = {version = "2.1.0", features = ["postgres"]}
dotenvy = "0.15"
ngrok = "0.12.3"
reqwest = {version = "0.11", features = ["json"]}
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
