[package]
edition = "2021"
name = "backend-v2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
chrono = {version = "0.4.24", features = ["serde"]}
dotenvy = "0.15"
femme = "2.2.1"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.7.1", features = ["postgres", "runtime-async-std-rustls", "macros", "chrono", "migrate"]}
tide = {version = "0.16.0", features = ["logger"]}
