[package]
edition = "2021"
name = "backend-v2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = {version = "1.12.0", features = ["attributes"]}
async-trait = "0.1.73"
chrono = {version = "0.4.24", features = ["serde"]}
dotenvy = "0.15"
femme = "2.2.1"
itertools = "0.11.0"
regex = "1.9.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.7.1", features = ["postgres", "runtime-async-std-rustls", "macros", "chrono", "migrate"]}
surf = {version = "2.3.2", features = ["h1-client-rustls"]}
thiserror = "1.0"
tide = {version = "0.16.0", features = ["logger"]}
