[package]
edition = "2021"
name = "calorie_counter_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.24", features = ["serde"]}
diesel = {version = "2.1.0", features = ["postgres", "chrono"]}
dotenvy = "0.15"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
